--- a/todo/templates/todo/signupuser.html
+++ b/todo/templates/todo/signupuser.html
@@ -1,3 +1,9 @@
+{% extends 'todo/base.html' %}
+
+
+{% block content %}
+
+
 <h1>Sign Up</h1>
 
 <h2>{{ error }}</h2>
@@ -8,3 +14,5 @@
   <button type="submit">Sign Up</button>
 
 </form>
+
+{% endblock %}
