Added complete authentication including Login, Logout

--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -5,12 +5,16 @@
 
 Logged In as {{ user.username }}
 
-<a href="#">Log Out</a>
+<form action="{% url 'logoutuser' %}" method="POST">
+{% csrf_token %}
+<button type="submit">Log Out</button>
+
+</form>
 
 
 {% else  %}
-<a href="#">Sign Up</a>
-<a href="#">Log In</a>
+<a href="{% url 'signupuser' %}">Sign Up</a>
+<a href="{% url 'loginuser' %}">Log In</a>
 
 {% endif %}
 <br />
